--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run --watch src/index.ts"
+    "dev": "bun run --watch src/index.ts",
+    "build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile server ./src/index.ts",
+    "build:vercel": "bun run build && bun scripts/transform-paths.ts"
   },
   "dependencies": {
     "elysia": "latest"
